--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-04-20  Vance Shipley <vances@sigscale.org>
+
+	* fix asp/sgp supervision strategy
+	* cleanup tables on fsm asp/sgp exit
+
 2018-04-18  Vance Shipley <vances@sigscale.org>
 
 	* refactored supervision for client connections
