--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-04-25  Vance Shipley <vances@sigscale.org>
+
+	* move registration decoding to asp/sgp
+	* stop on sctp comm lost
+	* refactor routing context/key in state
+
 2018-04-20  Vance Shipley <vances@sigscale.org>
 
 	* fix asp/sgp supervision strategy
