--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-07-31  Vance Shipley <vances@sigscale.org>
+
+	* safe calls to get statistics
+
 2018-07-29  Vance Shipley <vances@sigscale.org>
 
 	* prometheus: handle any term as name
